[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bdikit_context"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker_kernel~=1.10.1",
  "bdi-kit @ git+https://github.com/VIDA-NYU/bdi-kit.git@41f6c26e66064dd2aa6b436c023c98e4a96d1b5e",
  "torch==2.5.1"
]

[project.urls]
Documentation = "https://github.com/unknown/beaker-buildtest#readme"
Issues = "https://github.com/unknown/beaker-buildtest/issues"
Source = "https://github.com/unknown/beaker-buildtest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
require-runtime-dependencies = true

[tool.hatch.build.hooks.beaker]

[tool.hatch.version]
path = "src/bdikit_context/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bdikit_context}"

[tool.coverage.run]
source_pkgs = ["bdikit"]
branch = true
parallel = true
omit = [
  "src/bdikit_context/__about__.py",
]

[tool.coverage.paths]
bdikit = ["src/bdikit_context"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
